--- a/CAN_NORMAL_F303RE.ioc
+++ b/CAN_NORMAL_F303RE.ioc
@@ -2,12 +2,14 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN.BS1=CAN_BS1_2TQ
-CAN.CalculateBaudRate=500000
-CAN.CalculateTimeBit=2000
-CAN.CalculateTimeQuantum=500.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1
-CAN.Prescaler=18
+CAN.BS1=CAN_BS1_12TQ
+CAN.BS2=CAN_BS2_5TQ
+CAN.CalculateBaudRate=250000
+CAN.CalculateTimeBit=4000
+CAN.CalculateTimeQuantum=222.22222222222223
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,SJW
+CAN.Prescaler=8
+CAN.SJW=CAN_SJW_1TQ
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F303RET6
